--- a/week1/day2 EXERCISE.ipynb
+++ b/week1/day2 EXERCISE.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d15d8294-3328-4e07-ad16-8a03e9bbfdb9",
+   "id": "65e78a2f-6722-4f07-8a91-ab68263137ed",
    "metadata": {},
    "source": [
     "# TAREA DE EJERCICIO\n",
     "\n",
-    "Actualiza el proyecto del día 1 para resumir una página web y utilizar un modelo de código abierto que se ejecute localmente a través de Ollama en lugar de OpenAI\n",
+    "Actualiza el proyecto del día 1 para resumir una página web y utilizar un modelo de código abierto que se ejecute localmente a través de LM STUDIO en lugar de OpenAI\n",
     "\n",
     "Podrás utilizar esta técnica para todos los proyectos posteriores si prefiere no utilizar API de pago (closed source).\n",
     "\n",
@@ -18,51 +18,50 @@
     "**Desventajas:**\n",
     "1. Tiene mucha menos potencia (parámetros) que el modelo Frontier\n",
     "\n",
-    "## Resumen de la instalación de Ollama\n",
+    "## Resumen de la instalación de LLM STUDIO\n",
     "\n",
-    "¡Simplemente visita [ollama.com](https://ollama.com) e instálalo!\n",
+    "¡Simplemente visita [lmstudio.ai](https://lmstudio.ai) e instálalo!\n",
     "\n",
-    "Una vez que hayas terminado, el servidor ollama ya debería estar ejecutándose localmente.\n",
+    "Una vez que hayas terminado, el servidor LLM STUDIO ya debería estar ejecutándose localmente.\n",
     "Si entras en:\n",
-    "[http://localhost:11434/](http://localhost:11434/)\n",
+    "[http://172.30.240.1:1234/v1/models](http://172.30.240.1:1234/v1/models)\n",
     "\n",
-    "Debería ver el mensaje `Ollama se está ejecutando`.\n",
+    "Debería ver un json con los modelos que estan disponibles \n",
     "\n",
-    "De lo contrario, abre una nueva Terminal (Mac) o Powershell (Windows) e introduce `ollama serve`.\n",
-    "Luego, intenta entrar em [http://localhost:11434/](http://localhost:11434/) nuevamente."
+    "De lo contrario, abre LLM STUDIO, Developer, running server.\n",
+    "Luego, intenta entrar em [http://172.30.240.1:1234/v1/models](http://172.30.240.1:1234/v1/models) nuevamente."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "fba98a11-56c3-44ff-8ba9-de90cca39a13",
+   "metadata": {},
+   "source": [
+    "# imports\n",
+    "\n",
+    "import requests\n",
+    "import time\n",
+    "from bs4 import BeautifulSoup\n",
+    "from IPython.display import Markdown, display\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports\n",
-    "\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from IPython.display import Markdown, display"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "29ddd15d-a3c5-4f4e-a678-873f56162724",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constantes\n",
     "\n",
-    "OLLAMA_API = \"http://localhost:11434/api/chat\"\n",
+    "LMSTUDIO_API = \"http://172.30.240.1:1234/v1/chat/completions\"\n",
     "HEADERS = {\"Content-Type\": \"application/json\"}\n",
-    "MODEL = \"llama3.2\""
+    "MODEL = \"openai/gpt-oss-20b\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dac0a679-599c-441f-9bf2-ddc73d35b940",
    "metadata": {},
    "outputs": [],
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7bb9c624-14f0-4945-a719-8ddb64f66f47",
    "metadata": {},
    "outputs": [],
@@ -98,26 +97,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La inteligencia artificial (IA) generativa es un campo en constante crecimiento, y sus aplicaciones comerciales están expandiendo su alcance. A continuación, se presentan algunas de las aplicaciones comerciales más destacadas:\n",
+      "### Aplicaciones comerciales de la IA generativa\n",
       "\n",
-      "1. **Generación de contenido**: La IA generativa puede crear contenido automático, como artículos de blogs, descripciones de productos y redes sociales. Esto permite a las empresas ahorrar tiempo y recursos en la creación de contenido.\n",
-      "2. **Diseño de productos y arquitectura**: Las herramientas de IA generativa pueden ayudar a diseñadores y arquitectos a crear modelos 3D y renderizaciones de alta calidad, lo que puede acelerar el proceso de diseño y reducir los costos.\n",
-      "3. **Sintesis de imágenes y videos**: La IA generativa puede crear imágenes y videos de alta calidad que pueden ser utilizados en marketing, publicidad y contenido de medios sociales.\n",
-      "4. **Generación de música y audio**: Las herramientas de IA generativa pueden crear música y audio original, lo que puede ser utilizado en proyectos de marketing, publicidad y entretenimiento.\n",
-      "5. **Análisis de datos y visualización**: La IA generativa puede analizar grandes cantidades de datos y generar visualizaciones de alta calidad, lo que puede ayudar a las empresas a tomar decisiones informadas.\n",
-      "6. **Automatización de procesos**: La IA generativa puede automatizar procesos administrativos y de gestión, lo que puede reducir costos y mejorar la eficiencia de las operaciones.\n",
-      "7. **Sistemas de recomendación**: Las herramientas de IA generativa pueden analizar datos de comportamiento y recomendar productos o servicios a los clientes.\n",
-      "8. **Modelado de riesgos**: La IA generativa puede ayudar a las empresas a modelar riesgos y predecir eventos potenciales, lo que puede mejorar la toma de decisiones y la gestión de riesgos.\n",
-      "9. **Generación de software**: Las herramientas de IA generativa pueden ayudar a desarrolladores a crear software más rápido y eficiente.\n",
-      "10. **Servicios de asistencia virtual**: La IA generativa puede proporcionar servicios de asistencia virtual, como atención al cliente y respuesta a preguntas frecuentes.\n",
+      "| Área | Qué hace la IA generativa | Ejemplos concretos | Beneficios clave |\n",
+      "|------|--------------------------|--------------------|------------------|\n",
+      "| **Marketing y publicidad** | Genera copy, titulares, correos electrónicos y contenido visual (imágenes, videos) adaptado a cada segmento de audiencia. | - Herramientas como *Copy.ai*, *Jasper* o *Writesonic* que crean anuncios para Facebook/Google.<br>- Plataformas de generación de imágenes (Midjourney, DALL·E 3, Stable Diffusion) usadas por agencias para crear mock‑ups y conceptos rápidos. | Reducción de tiempo creativo, mayor personalización a escala, pruebas A/B más rápidas. |\n",
+      "| **Diseño gráfico y creativo** | Crea logos, paletas de colores, maquetas de sitios web y diseños UI/UX en segundos. | - *Canva* incorpora IA generativa para proponer diseños basados en descripciones.<br>- Herramientas como *Figma* con plugins de generación automática de prototipos. | Acelera el proceso de ideación, democratiza el diseño (no se necesita diseñador experto). |\n",
+      "| **Desarrollo de software** | Genera código fuente a partir de especificaciones en lenguaje natural o refina/optimiza fragmentos existentes. | - *GitHub Copilot*, *Tabnine*.<br>- Plataformas internas que auto‑generan microservicios o pruebas unitarias. | Incrementa la productividad del desarrollador, reduce bugs y tiempo de entrega. |\n",
+      "| **Atención al cliente** | Chatbots conversacionales avanzados capaces de manejar consultas complejas y redactar respuestas personalizadas. | - *Zendesk*, *Intercom* con IA generativa para crear tickets y respuestas automáticas.<br>- Asistentes de voz en banca (ej. banca digital de BBVA). | Mejora la satisfacción del cliente, reduce costos operativos y escala soporte sin incrementar staff. |\n",
+      "| **Finanzas y seguros** | Genera informes financieros, análisis predictivo y simulaciones de escenarios económicos. | - *Kensho* que produce análisis de mercado en tiempo real.<br>- Sistemas internos de compañías de seguros que generan pólizas personalizadas a partir de datos de riesgo. | Toma de decisiones más informada, cumplimiento regulatorio automatizado, mayor precisión en precios. |\n",
+      "| **Ventas y CRM** | Automatiza la generación de propuestas comerciales, scripts de venta y seguimiento de leads. | - *HubSpot* con IA que escribe propuestas basadas en historial del cliente.<br>- Herramientas que generan correos de seguimiento personalizados a cada etapa del funnel. | Incrementa tasa de cierre, reduce tiempo de respuesta al prospecto. |\n",
+      "| **Educación corporativa** | Crea contenido didáctico personalizado (manuales, módulos de e‑learning) y simulaciones interactivas. | - Plataformas como *Coursera* o *Udemy* que generan quizzes adaptativos.<br>- Empresas que usan IA para crear tutoriales técnicos en tiempo real. | Mejora el aprendizaje a medida, reduce costos de producción de material didáctico. |\n",
+      "| **Medios y entretenimiento** | Genera guiones, diálogos, música, efectos visuales o incluso videojuegos completos. | - *ScriptAI* que escribe borradores de películas.<br>- Herramientas como *OpenAI’s MuseNet* para componer música a pedido. | Reduce tiempo de pre‑producción, permite experimentación creativa sin grandes equipos. |\n",
+      "| **Logística y cadena de suministro** | Optimiza rutas, pronostica demanda y genera planes de inventario en función de datos históricos. | - *IBM Watson Supply Chain* que simula escenarios de demanda.<br>- Empresas que usan IA generativa para generar contratos de logística personalizados. | Ahorra costos operativos, mejora la disponibilidad de stock, reduce desperdicios. |\n",
+      "| **Industria farmacéutica** | Diseña moléculas y compuestos potenciales, genera protocolos experimentales y redacta artículos científicos. | - *Atomwise*, *Exscientia* que generan candidatos de fármacos.<br>- Herramientas internas que redactan manuscritos para publicaciones. | Acorta ciclos de descubrimiento, reduce coste de I+D, acelera la aprobación regulatoria. |\n",
+      "| **Legal y cumplimiento** | Automatiza la redacción de contratos, acuerdos de confidencialidad y análisis de riesgo legal. | - *LawGeex* compara contratos con plantillas legales.<br>- Sistemas que generan respuestas a consultas regulatorias en tiempo real. | Minimiza errores humanos, acelera procesos legales y reduce costes de consultoría. |\n",
+      "| **Recursos Humanos** | Crea descripciones de puestos, resume CVs, genera preguntas de entrevista personalizadas. | - *HireVue* con IA para pre‑evaluar candidatos.<br>- Plataformas que generan planes de desarrollo individual. | Mejora la calidad del talento contratado y reduce sesgos en selección. |\n",
+      "| **Arquitectura e inmobiliaria** | Genera planos arquitectónicos, renders 3D y simulaciones de iluminación a partir de descripciones textuales. | - *Spacemaker AI* que optimiza diseños urbanos.<br>- Herramientas que crean modelos 3D de interiores para clientes. | Reduce iteraciones de diseño, facilita la visualización del proyecto por parte del cliente. |\n",
+      "| **Sostenibilidad** | Genera informes de impacto ambiental y propone estrategias de reducción de huella de carbono. | - *Microsoft Sustainability Calculator* que modela escenarios de emisiones.<br>- Plataformas que generan planes de economía circular a partir de datos operativos. | Ayuda a cumplir metas ESG, identifica oportunidades de ahorro energético. |\n",
       "\n",
-      "En resumen, la IA generativa tiene una amplia gama de aplicaciones comerciales que pueden mejorar la eficiencia, reducir costos y aumentar la productividad de las empresas.\n"
+      "---\n",
+      "\n",
+      "#### ¿Por qué la IA generativa está revolucionando el comercio?\n",
+      "\n",
+      "1. **Escala creativa** – Lo que antes requería horas de trabajo manual se puede generar en segundos o minutos.\n",
+      "2. **Personalización masiva** – El contenido (texto, imagen, audio) se adapta a cada usuario sin un incremento lineal de costos.\n",
+      "3. **Reducción de costes operativos** – Menos mano‑obra humana para tareas repetitivas y más eficiencia en procesos críticos.\n",
+      "4. **Innovación continua** – Las máquinas aprenden de miles de ejemplos, lo que permite explorar nuevas ideas rápidamente.\n",
+      "\n",
+      "En resumen, la IA generativa ya forma parte del día a día de muchas industrias: desde la creación de contenido hasta la optimización de cadenas logísticas, pasando por el diseño y la toma de decisiones estratégicas. Su adopción sigue creciendo conforme los modelos mejoran y las barreras tecnológicas se reducen.\n",
+      "El bloque tardó 138.7215 segundos\n"
      ]
     }
    ],
    "source": [
-    "response = requests.post(OLLAMA_API, json=payload, headers=HEADERS)\n",
-    "print(response.json()['message']['content'])"
+    "start_time = time.time()  # Guarda el tiempo de inicio\n",
+    "response = requests.post(LMSTUDIO_API, json=payload, headers=HEADERS)\n",
+    "print(response.json()['choices'][0]['message']['content'])\n",
+    "\n",
+    "end_time = time.time()  # Tiempo al finalizar\n",
+    "elapsed = end_time - start_time  # Tiempo transcurrido en segundos\n",
+    "print(f\"El bloque tardó {elapsed:.4f} segundos\")"
    ]
   },
   {
@@ -125,49 +145,19 @@
    "id": "6a021f13-d6a1-4b96-8e18-4eae49d876fe",
    "metadata": {},
    "source": [
-    "# Presentación del paquete ollama\n",
+    "# Presentación del paquete OLLAMA\n",
     "\n",
-    "Ahora haremos lo mismo, pero utilizando el elegante paquete de Python ollama en lugar de una llamada HTTP directa.\n",
+    "Ahora haremos lo mismo, pero utilizando el elegante paquete de Python OLLAMA en lugar de una llamada HTTP directa.\n",
     "\n",
     "En esencia, se realiza la misma llamada que se indicó anteriormente al servidor ollama que se ejecuta en localhost:11434"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7745b9c4-57dc-4867-9180-61fa5db55eb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La inteligencia artificial (IA) generativa es un campo en constante evolución que permite a los sistemas informáticos crear contenido nuevo y valioso sin intervención humana directa. A continuación, se presentan algunas de las aplicaciones comerciales más destacadas de la IA generativa:\n",
-      "\n",
-      "1. **Generación de contenido**: La IA generativa puede generar texto, imágenes y videos en función de un conjunto de instrucciones o patrones. Esto permite a las empresas crear contenido de alta calidad sin tener que invertir recursos en personas con habilidades creativas.\n",
-      "\n",
-      "2. **Diseño de productos virtuales**: Las herramientas de IA generativa permiten diseñar productos virtuales, como ropa, accesorios y elementos decorativos, lo que facilita la creación de visualizaciones para marketing y diseño.\n",
-      "\n",
-      "3. **Edición de imágenes**: La IA generativa puede mejorar las ediciones de imágenes automatizando el proceso de corrección de tonalidad, contraste, etc.\n",
-      "\n",
-      "4. **Creación de música**: Los sistemas de IA generativos pueden generar música original en función de patrones musicales y estilos específicos.\n",
-      "\n",
-      "5. **Análisis de datos**: La IA generativa se utiliza para analizar grandes cantidades de datos y extraer patrones y tendencias que pueden ser utilizados para tomar decisiones informadas.\n",
-      "\n",
-      "6. **Generación de código fuente**: Los sistemas de IA generativos pueden generar código fuente en lenguajes como Python, JavaScript o C++.\n",
-      "\n",
-      "7. **Generación de contenido de marketing**: La IA generativa puede crear contenidos de marketing personalizados y relevantes para los clientes, como publicidad dirigida y correos electrónicos promocionales.\n",
-      "\n",
-      "8. **Diseño de interfaces de usuario**: Las herramientas de IA generativa permiten diseñar interiores de interfaces de usuario que son más atractivas y fáciles de usar.\n",
-      "\n",
-      "9. **Generación de narrativas**: Los sistemas de IA generativos pueden generar historias, guiones o incluso personajes para proyectos de cine, televisión o literatura.\n",
-      "\n",
-      "10. **Análisis de sentimiento**: La IA generativa se utiliza para analizar los sentimientos y emociones de las personas a través de textos, imágenes y audio.\n",
-      "\n",
-      "Estas son solo algunas de las aplicaciones comerciales más destacadas de la IA generativa. El campo está en constante evolución y se espera que aumenten el número de posibilidades creativas y productivas para las empresas.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ollama\n",
     "\n",
@@ -218,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
