--- a/week1/Intermediate Python.ipynb
+++ b/week1/Intermediate Python.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5802e2f0-0ea0-4237-bbb7-f375a34260f0",
    "metadata": {},
    "outputs": [],
@@ -73,10 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "61992bb8-735d-4dad-8747-8c10b63aec82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apples\n",
+      "Bananas\n",
+      "Pears\n"
+     ]
+    }
+   ],
    "source": [
     "# Nivel fácil para empezar\n",
     "\n",
@@ -86,10 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c89c3842-9b74-47fa-8424-0fcb08e4177c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS', 'PEARS']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Vamos a crear una nueva versión de las frutas\n",
     "\n",
@@ -102,10 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ec13b3a-9545-44f1-874a-2910a0663560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS', 'PEARS']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Probablemente ya sepas esto\n",
     "# Hay una construcción de Python muy útil llamada \"comprensión de listas\" que hace esto:\n",
@@ -129,10 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "500c2406-00d2-4793-b57b-f49b612760c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APPLES', 'BANANAS']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# También puedes usar la declaración if para filtrar los resultados\n",
     "\n",
@@ -142,10 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "38c11c34-d71e-45ba-945b-a3d37dc29793",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Bananas': 'BANANAS', 'Pears': 'PEARS'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fruit_mapping_unless_starts_with_a = {fruit:fruit.upper() for fruit in fruits if not fruit.startswith('A')}\n",
     "fruit_mapping_unless_starts_with_a"
@@ -153,10 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5c97d8e8-31de-4afa-973e-28d8e5cab749",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Great Expectations', 'Bleak House', 'An Book By No Author', 'Moby Dick']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Otra explicación\n",
     "\n",
@@ -165,10 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "50be0edc-a4cd-493f-a680-06080bb497b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'author'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Este código fallará con un error porque uno de nuestros libros no tiene autor\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43m[\u001b[49m\u001b[43mbook\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mauthor\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mbook\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mbooks\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36m<listcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Este código fallará con un error porque uno de nuestros libros no tiene autor\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m [\u001b[43mbook\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mauthor\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m book \u001b[38;5;129;01min\u001b[39;00m books]\n",
+      "\u001b[31mKeyError\u001b[39m: 'author'"
+     ]
+    }
+   ],
    "source": [
     "# Este código fallará con un error porque uno de nuestros libros no tiene autor\n",
     "\n",
@@ -177,10 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "53794083-cc09-4edb-b448-2ffb7e8495c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Charles Dickens', 'Charles Dickens', None, 'Herman Melville']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pero esto funcionará, porque get() devuelve None\n",
     "\n",
@@ -189,10 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b8e4b859-24f8-4016-8d74-c2cef226d049",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Charles Dickens', 'Charles Dickens', 'Herman Melville']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Y esta variación filtrará el None\n",
     "\n",
@@ -201,10 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c44bb999-52b4-4dee-810b-8a400db8f25f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Charles Dickens', 'Herman Melville'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Y esta versión lo convertirá en un conjunto, eliminando duplicados.\n",
     "\n",
@@ -213,10 +324,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "80a65156-6192-4bb4-b4e6-df3fdc933891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Charles Dickens', 'Herman Melville'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Y finalmente, esta versión es aún mejor\n",
     "# Las llaves crean un conjunto, por lo que se trata de una comprensión de conjunto.\n",
@@ -242,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1efc26fa-9144-4352-9a17-dfec1d246aad",
    "metadata": {},
    "outputs": [],
@@ -259,10 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "eac338bb-285c-45c8-8a3e-dbfc41409ca3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apples\n",
+      "Bananas\n",
+      "Pears\n"
+     ]
+    }
+   ],
    "source": [
     "# Vamos a usarlo\n",
     "\n",
@@ -272,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f6880578-a3de-4502-952a-4572b95eb9ff",
    "metadata": {},
    "outputs": [],
@@ -287,10 +419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9e316f02-f87f-441d-a01f-024ade949607",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Lo usamos\n",
     "\n",
@@ -300,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7535c9d0-410e-4e56-a86c-ae6c0e16053f",
    "metadata": {},
    "outputs": [],
@@ -314,10 +456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "dad34494-0f6c-4edb-b03f-b8d49ee186f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Lo usamos\n",
     "\n",
@@ -327,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "abeb7e61-d8aa-4af0-b05a-ae17323e678c",
    "metadata": {},
    "outputs": [],
@@ -341,10 +493,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "05b0cb43-aa83-4762-a797-d3beb0f22c44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Lo usamos\n",
     "\n",
@@ -354,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fdfea58e-d809-4dd4-b7b0-c26427f8be55",
    "metadata": {},
    "outputs": [],
@@ -367,10 +529,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3e821d08-97be-4db9-9a5b-ce5dced3eff8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Lo usamos\n",
     "\n",
@@ -380,10 +551,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "905ba603-15d8-4d01-9a79-60ec293d7ca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They bathe in whimsical calculators. I impersonate turqoise thermostats. I philosophize about suspicious turnips. I dramatically renounce smelly spreadsheets. We worship overripe monocles. You impersonate overripe accordions. We bathe in turqoise kumquats. I dramatically renounce wobbly rodents. I detest whimsical kumquats. We eat festering thermostats. You worship arrogant wombats. You juggle smelly wombats. I impersonate pompous eels. You impersonate overripe calculators. I bathe in whimsical rodents. They bathe in overripe accordions. We resent suspicious wombats. They pontificate about fluorescent thermostats. They conspire with pretentious kumquats. You misplace wobbly bagpipes. We deny the existence of arrogant monocles. They worship wobbly calculators. You juggle wobbly wombats. You juggle whimsical accordions. They deny the existence of suspicious monocles. They worship turqoise mustaches. They resent overripe rodents. I secretly collect pretentious accordions. I deny the existence of disheveled thermostats. I tap dance on turqoise monocles. We resent disheveled kumquats. They dramatically renounce fluorescent walruses. I pontificate about festering accordions. They resent suspicious calculators. You pontificate about suspicious monocles. I pontificate about overripe calculators. You worship melodramatic eels. You dramatically renounce fluorescent mustaches. They deny the existence of suspicious turnips. You resent overripe bagpipes. We bathe in whimsical kumquats. I tap dance on whimsical accordions. They worship pleasing mustaches. The"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m letter \u001b[38;5;129;01min\u001b[39;00m infinite_random_sentences():\n\u001b[32m     25\u001b[39m     \u001b[38;5;28mprint\u001b[39m(letter, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, flush=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m     time.sleep(\u001b[32m0.02\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# Y para divertirse un poco, ¡presione el botón de parada en la barra de herramientas cuando se aburra!\n",
     "# Es como si hubiéramos creado nuestro propio modelo de lenguaje grande... aunque no particularmente grande...\n",
@@ -456,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
