--- a/week1/week1 EXERCISE.ipynb
+++ b/week1/week1 EXERCISE.ipynb
@@ -13,10 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c1070317-3ed9-4659-abe3-828943230e03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La clave de API parece buena\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "\n",
@@ -27,31 +35,8 @@
     "from dotenv import load_dotenv\n",
     "from bs4 import BeautifulSoup\n",
     "from IPython.display import Markdown, display, update_display\n",
-    "from openai import OpenAI\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a456906-915a-4bfd-bb9d-57e505c5093f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# constantes\n",
+    "from openai import OpenAI\n",
     "\n",
-    "OLLAMA_API = \"http://localhost:11434/api/chat\"\n",
-    "HEADERS = {\"Content-Type\": \"application/json\"}\n",
-    "MODEL_GPT = 'gpt-4o-mini'\n",
-    "MODEL_LLAMA = 'llama3.2'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d7923c-5f28-4c30-8556-342d7c8497c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Configura el entorno\n",
     "\n",
     "load_dotenv()\n",
@@ -62,16 +47,9 @@
     "else:\n",
     "    print(\"¿Puede haber un problema con tu clave API? ¡Visita el cuaderno de resolución de problemas!\")\n",
     "\n",
-    "openai = OpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f0d0137-52b0-47a8-81a8-11a90a010798",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "openai = OpenAI()\n",
+    "\n",
+    "\n",
     "# Aquí está la pregunta; escribe sobre esto para preguntar algo nuevo\n",
     "\n",
     "system_prompt = \"Necesito que actues como un programador experto en Python. \\\n",
@@ -80,23 +58,14 @@
     "\n",
     "user_prompt = \"\"\"\n",
     "Explica qué hace este código y por qué:\n",
-    "yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60ce7000-a4a5-4cce-a261-e75ef45063b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Haz que gpt-4o-mini responda, con streaming\n",
+    "\n",
+    "\"\"\"\n",
     "\n",
     "def python_expert():\n",
-    "    # Llamada al modelo con streaming habilitado\n",
+    "    # Llamada al modelo con streaming habilitado    \n",
+    "    \n",
     "    stream = openai.chat.completions.create(\n",
-    "        model=MODEL_GPT,\n",
+    "        model='gpt-4o-mini',\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -114,10 +83,145 @@
     "        response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
     "        update_display(Markdown(response), display_id=display_handle.display_id)\n",
     "\n",
-    "    return response\n",
-    "\n",
-    "\n",
+    "    return response\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60ce7000-a4a5-4cce-a261-e75ef45063b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "El código que has proporcionado utiliza la función `display()` junto con `Markdown()` y una opción `display_id=True`. Voy a desglosar cada componente para que puedas entender qué hace este código y su utilidad.\n",
+       "\n",
+       "### Desglose del código\n",
+       "\n",
+       "python\n",
+       "display_handle = display(Markdown(), display_id=True)\n",
+       "\n",
+       "\n",
+       "1. **`Markdown()`**:\n",
+       "   - `Markdown` es una función que forma parte de la biblioteca `IPython.display`. Esta función se utiliza para crear un objeto que formatea texto en [Markdown](https://www.guide.org/), que es un lenguaje de marcado ligero.\n",
+       "   - Al instanciar `Markdown()` sin contenido, se crea un objeto vacío que puede ser modificado posteriormente.\n",
+       "\n",
+       "2. **`display()`**:\n",
+       "   - `display()` es otra función de `IPython.display` que permite mostrar objetos visualmente dentro de un cuaderno Jupyter (o en otros entornos interactivos de IPython).\n",
+       "   - Cuando se llama a `display()` con un objeto, se renderiza ese objeto en el entorno donde se está ejecutando el código. En este caso, está renderizando el objeto `Markdown()` que se pasa como argumento.\n",
+       "\n",
+       "3. **`display_id=True`**:\n",
+       "   - Este argumento permite que el objeto que se está mostrando reciba un identificador que pueda ser utilizado para actualizar o reemplazar el contenido de ese objeto más tarde. \n",
+       "   - Esto es útil en interacciones en tiempo real, donde puedes querer actualizar el texto mostrado sin volver a ejecutar el bloque de código completo que lo mostró originalmente.\n",
+       "\n",
+       "4. **`display_handle`**:\n",
+       "   - La variable `display_handle` almacenará el \"handle\" (o manejador) devuelto por la llamada a `display()`. Este manejador puede usarse más tarde para actualizar el contenido que se está mostrando en la celda `Markdown` utilizando su ID.\n",
+       "\n",
+       "### ¿Por qué se usa este código?\n",
+       "\n",
+       "Este tipo de código es típicamente utilizado en aplicaciones donde se requiere mostrar información que puede cambiar según la interacción del usuario o en respuesta a eventos en tiempo real. Por ejemplo, podría ser útil en un Jupyter notebook para mostrar resultados de cálculos o estados de ejecución que se actualizan en la misma celda.\n",
+       "\n",
+       "### Ejemplo de uso\n",
+       "\n",
+       "A continuación, se presenta un pequeño ejemplo que demuestra cómo se puede utilizar este código para actualizar el contenido:\n",
+       "\n",
+       "python\n",
+       "from IPython.display import display, Markdown\n",
+       "import time\n",
+       "\n",
+       "# Crear un objeto Markdown y mostrarlo\n",
+       "display_handle = display(Markdown(\"Estado: Iniciando...\"), display_id=True)\n",
+       "\n",
+       "# Simulación de un proceso\n",
+       "for i in range(5):\n",
+       "    time.sleep(1)  # Simula procesamiento\n",
+       "    # Actualiza el contenido del Markdown\n",
+       "    display_handle.update(Markdown(f\"Estado: Progreso {i + 1}/5\"))\n",
+       "\n",
+       "# Finalmente, mostrar un estado completo\n",
+       "display_handle.update(Markdown(\"Estado: Completo.\"))\n",
+       "\n",
+       "\n",
+       "### Resumen\n",
+       "\n",
+       "- **`display(Markdown(), display_id=True)`** crea un objeto de Markdown vacío, lo muestra, y le asigna un identificador para futuras actualizaciones.\n",
+       "- Esto es muy útil en entornos de Jupyter para actualizaciones dinámicas y para mostrar resultados en tiempo real.\n",
+       "\n",
+       "Espero que esta explicación te haya ayudado a entender el propósito y el uso de este código en Python. Si tienes más preguntas, no dudes en preguntar. ¡Feliz programación!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Respuesta final completa:\n",
+      "El código que has proporcionado utiliza la función `display()` junto con `Markdown()` y una opción `display_id=True`. Voy a desglosar cada componente para que puedas entender qué hace este código y su utilidad.\n",
+      "\n",
+      "### Desglose del código\n",
+      "\n",
+      "python\n",
+      "display_handle = display(Markdown(), display_id=True)\n",
+      "\n",
+      "\n",
+      "1. **`Markdown()`**:\n",
+      "   - `Markdown` es una función que forma parte de la biblioteca `IPython.display`. Esta función se utiliza para crear un objeto que formatea texto en [Markdown](https://www.guide.org/), que es un lenguaje de marcado ligero.\n",
+      "   - Al instanciar `Markdown()` sin contenido, se crea un objeto vacío que puede ser modificado posteriormente.\n",
+      "\n",
+      "2. **`display()`**:\n",
+      "   - `display()` es otra función de `IPython.display` que permite mostrar objetos visualmente dentro de un cuaderno Jupyter (o en otros entornos interactivos de IPython).\n",
+      "   - Cuando se llama a `display()` con un objeto, se renderiza ese objeto en el entorno donde se está ejecutando el código. En este caso, está renderizando el objeto `Markdown()` que se pasa como argumento.\n",
+      "\n",
+      "3. **`display_id=True`**:\n",
+      "   - Este argumento permite que el objeto que se está mostrando reciba un identificador que pueda ser utilizado para actualizar o reemplazar el contenido de ese objeto más tarde. \n",
+      "   - Esto es útil en interacciones en tiempo real, donde puedes querer actualizar el texto mostrado sin volver a ejecutar el bloque de código completo que lo mostró originalmente.\n",
+      "\n",
+      "4. **`display_handle`**:\n",
+      "   - La variable `display_handle` almacenará el \"handle\" (o manejador) devuelto por la llamada a `display()`. Este manejador puede usarse más tarde para actualizar el contenido que se está mostrando en la celda `Markdown` utilizando su ID.\n",
+      "\n",
+      "### ¿Por qué se usa este código?\n",
+      "\n",
+      "Este tipo de código es típicamente utilizado en aplicaciones donde se requiere mostrar información que puede cambiar según la interacción del usuario o en respuesta a eventos en tiempo real. Por ejemplo, podría ser útil en un Jupyter notebook para mostrar resultados de cálculos o estados de ejecución que se actualizan en la misma celda.\n",
+      "\n",
+      "### Ejemplo de uso\n",
+      "\n",
+      "A continuación, se presenta un pequeño ejemplo que demuestra cómo se puede utilizar este código para actualizar el contenido:\n",
+      "\n",
+      "python\n",
+      "from IPython.display import display, Markdown\n",
+      "import time\n",
+      "\n",
+      "# Crear un objeto Markdown y mostrarlo\n",
+      "display_handle = display(Markdown(\"Estado: Iniciando...\"), display_id=True)\n",
+      "\n",
+      "# Simulación de un proceso\n",
+      "for i in range(5):\n",
+      "    time.sleep(1)  # Simula procesamiento\n",
+      "    # Actualiza el contenido del Markdown\n",
+      "    display_handle.update(Markdown(f\"Estado: Progreso {i + 1}/5\"))\n",
+      "\n",
+      "# Finalmente, mostrar un estado completo\n",
+      "display_handle.update(Markdown(\"Estado: Completo.\"))\n",
+      "\n",
+      "\n",
+      "### Resumen\n",
+      "\n",
+      "- **`display(Markdown(), display_id=True)`** crea un objeto de Markdown vacío, lo muestra, y le asigna un identificador para futuras actualizaciones.\n",
+      "- Esto es muy útil en entornos de Jupyter para actualizaciones dinámicas y para mostrar resultados en tiempo real.\n",
+      "\n",
+      "Espero que esta explicación te haya ayudado a entender el propósito y el uso de este código en Python. Si tienes más preguntas, no dudes en preguntar. ¡Feliz programación!\n"
+     ]
+    }
+   ],
+   "source": [
     "# Llamada a la función\n",
+    "user_prompt += \"display_handle = display(Markdown(\"\"), display_id=True)\"\n",
     "final_response = python_expert()\n",
     "print(\"Respuesta final completa:\")\n",
     "print(final_response)\n"
@@ -126,42 +230,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f7c8ea8-4082-4ad0-8751-3301adcf6538",
+   "id": "14e202b1-66c4-4dcf-acbd-02571f2f708f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Haz que Llama 3.2 responda\n",
-    "\n",
-    "messages = [\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": (\n",
-    "            \"Necesito que actúes como un programador experto en Python. \"\n",
-    "            \"Responde lo más detallado posible, dando ejemplos. \"\n",
-    "            \"Responde en formato markdown. \"\n",
-    "            \"Explica qué hace este código y por qué: \"\n",
-    "            \"yield from {book.get('author') for book in books if book.get('author')}\"\n",
-    "        )\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "payload = {\n",
-    "    \"model\": MODEL_LLAMA,\n",
-    "    \"messages\": messages,\n",
-    "    \"stream\": False\n",
-    "}\n",
-    "\n",
-    "response = requests.post(OLLAMA_API, json=payload, headers=HEADERS)\n",
-    "\n",
-    "# Procesar la respuesta JSON\n",
-    "response_json = response.json()\n",
-    "\n",
-    "# Extraer el contenido de la respuesta\n",
-    "message_content = response_json.get('message', {}).get('content', 'No content received')\n",
-    "\n",
-    "# Mostrar en formato Markdown\n",
-    "display(Markdown(message_content))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -180,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
