--- a/week1/day2 EXERCISE-LLM_Studio.ipynb
+++ b/week1/day2 EXERCISE-LLM_Studio.ipynb
@@ -57,23 +57,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "42b9f644-522d-4e05-a691-56e7658c0ea9",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/markdown": [
+       "**Aplicaciones comerciales de la IA generativa**\n",
+       "\n",
+       "La IA generativa se ha convertido en una herramienta clave para optimizar procesos y crear experiencias únicas en diversos sectores. En el marketing digital, genera contenidos persuasivos—textos publicitarios, descripciones de productos e incluso guiones de video—personalizados a cada segmento de audiencia, reduciendo tiempos de producción y mejorando la conversión. En diseño gráfico y moda, crea bocetos, patrones y prototipos visuales que aceleran el ciclo creativo, mientras que en la industria farmacéutica ayuda a diseñar moléculas con propiedades deseadas, acelerando el descubrimiento de fármacos. Además, en el sector financiero se emplea para redactar informes analíticos y generar simulaciones de escenarios económicos, lo que facilita la toma de decisiones basada en datos. En conjunto, estas aplicaciones impulsan la eficiencia operativa, reducen costos y abren nuevas oportunidades de innovación."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## Aplicaciones comerciales de la IA generativa\n",
-      "\n",
-      "La IA generativa se está integrando en múltiples sectores para optimizar procesos, mejorar la experiencia del cliente y crear valor añadido. En **marketing digital**, genera contenidos personalizados (escritura de anuncios, descripciones de productos o guiones de video) que aumentan el engagement y reducen costos de producción. En **desarrollo de software**, escribe fragmentos de código, documenta APIs y prueba automáticamente, acelerando ciclos de entrega. La **industria creativa** aprovecha la generación de imágenes, música y textos narrativos para prototipar arte o producir material audiovisual a escala. En **atención al cliente**, los chatbots generativos manejan consultas complejas con respuestas más naturales y contextuales, mientras que en **finanzas** crean informes analíticos y modelos predictivos que ayudan a la toma de decisiones. Finalmente, en **e-commerce** se usan para recomendar productos, generar descripciones únicas y optimizar precios dinámicamente, todo ello contribuyendo a un aumento medible en conversiones y satisfacción del usuario.\n",
-      "\n",
-      "---\n",
-      "TEXTO COMPLETO:\n",
-      " ## Aplicaciones comerciales de la IA generativa\n",
-      "\n",
-      "La IA generativa se está integrando en múltiples sectores para optimizar procesos, mejorar la experiencia del cliente y crear valor añadido. En **marketing digital**, genera contenidos personalizados (escritura de anuncios, descripciones de productos o guiones de video) que aumentan el engagement y reducen costos de producción. En **desarrollo de software**, escribe fragmentos de código, documenta APIs y prueba automáticamente, acelerando ciclos de entrega. La **industria creativa** aprovecha la generación de imágenes, música y textos narrativos para prototipar arte o producir material audiovisual a escala. En **atención al cliente**, los chatbots generativos manejan consultas complejas con respuestas más naturales y contextuales, mientras que en **finanzas** crean informes analíticos y modelos predictivos que ayudan a la toma de decisiones. Finalmente, en **e-commerce** se usan para recomendar productos, generar descripciones únicas y optimizar precios dinámicamente, todo ello contribuyendo a un aumento medible en conversiones y satisfacción del usuario.\n"
+      "\n"
      ]
     }
    ],
@@ -91,6 +97,7 @@
     "    }\n",
     "\n",
     "acc = []  # por si quieres conservar el texto completo\n",
+    "display_handle = display(Markdown(\"\"), display_id=True)\n",
     "\n",
     "with requests.post(LM_STUDIO_API, json=payload, headers=HEADERS, stream=True) as r:\n",
     "    r.raise_for_status()\n",
@@ -108,12 +115,10 @@
     "        if data.get(\"choices\"):\n",
     "            delta = data[\"choices\"][0].get(\"delta\", {})\n",
     "            if \"content\" in delta:\n",
-    "                print(delta[\"content\"], end=\"\", flush=True)\n",
-    "                acc.append(delta[\"content\"])\n",
-    "\n",
+    "                acc.append(delta[\"content\"])                \n",
+    "                update_display(Markdown(\"\".join(acc)), display_id=display_handle.display_id)\n",
     "print()\n",
-    "full_text = \"\".join(acc)\n",
-    "print(\"\\n---\\nTEXTO COMPLETO:\\n\", full_text)\n",
+    "\n",
     "\n",
     "\n"
    ]
