--- a/week2/day3.ipynb
+++ b/week2/day3.ipynb
@@ -34,8 +34,7 @@
      "output_type": "stream",
      "text": [
       "OpenAI API Key existe y empieza por sk-proj-\n",
-      "Anthropic API Key existe y empieza por sk-ant-\n",
-      "Google API Key existe y empieza por AIzaSyBk\n"
+      "Google API Key existe y empieza por AIzaSyDu\n"
      ]
     }
    ],
@@ -45,18 +44,12 @@
     "\n",
     "load_dotenv()\n",
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
     "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
     "if openai_api_key:\n",
     "    print(f\"OpenAI API Key existe y empieza por {openai_api_key[:8]}\")\n",
     "else:\n",
     "    print(\"OpenAI API Key Sin Configurar\")\n",
-    "    \n",
-    "if anthropic_api_key:\n",
-    "    print(f\"Anthropic API Key existe y empieza por {anthropic_api_key[:7]}\")\n",
-    "else:\n",
-    "    print(\"Anthropic API Key Sin Configurar\")\n",
     "\n",
     "if google_api_key:\n",
     "    print(f\"Google API Key existe y empieza por {google_api_key[:8]}\")\n",
@@ -132,10 +125,8 @@
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "\n",
-    "    print(\"El historial es:\")\n",
-    "    print(history)\n",
-    "    print(\"Y los mensajes son:\")\n",
-    "    print(messages)\n",
+    "    print(\"Total de mensajes: \")\n",
+    "    print(len(messages))\n",
     "\n",
     "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
     "\n",
@@ -163,15 +154,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7871\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7871/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -187,28 +177,6 @@
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El historial es:\n",
-      "[]\n",
-      "Y los mensajes son:\n",
-      "[{'role': 'system', 'content': 'Eres un assistente muy útil'}, {'role': 'user', 'content': 'Hola'}]\n",
-      "El historial es:\n",
-      "[{'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}]\n",
-      "Y los mensajes son:\n",
-      "[{'role': 'system', 'content': 'Eres un assistente muy útil'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}, {'role': 'user', 'content': 'Quiero comprar una corbata'}]\n",
-      "El historial es:\n",
-      "[{'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero comprar una corbata'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Claro! Aquí tienes algunos consejos para elegir una corbata:\\n\\n1. **Ocasión**: Considera para qué evento necesitas la corbata. Las corbatas para ocasiones formales pueden ser más elegantes, mientras que las informales pueden ser más divertidas.\\n\\n2. **Color**: Piensa en los colores de la ropa que ya tienes. Las corbatas en colores sólidos son versátiles, pero también puedes optar por patrones como rayas, lunares o cuadros.\\n\\n3. **Material**: Las corbatas pueden estar hechas de seda, poliéster, lana, entre otros. La seda es una opción elegante para eventos formales.\\n\\n4. **Ancho**: El ancho de la corbata puede afectar la apariencia general. Las corbatas más delgadas pueden verse más modernas, mientras que las más anchas son clásicas.\\n\\n5. **Tamaño**: Asegúrate de que la corbata se ajuste a tu altura y complexión. También considera la longitud para que llegue a la altura adecuada del cinturón.\\n\\nSi necesitas recomendaciones de lugares para comprar o estilos específicos, ¡dímelo!'}]\n",
-      "Y los mensajes son:\n",
-      "[{'role': 'system', 'content': 'Eres un assistente muy útil'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero comprar una corbata'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Claro! Aquí tienes algunos consejos para elegir una corbata:\\n\\n1. **Ocasión**: Considera para qué evento necesitas la corbata. Las corbatas para ocasiones formales pueden ser más elegantes, mientras que las informales pueden ser más divertidas.\\n\\n2. **Color**: Piensa en los colores de la ropa que ya tienes. Las corbatas en colores sólidos son versátiles, pero también puedes optar por patrones como rayas, lunares o cuadros.\\n\\n3. **Material**: Las corbatas pueden estar hechas de seda, poliéster, lana, entre otros. La seda es una opción elegante para eventos formales.\\n\\n4. **Ancho**: El ancho de la corbata puede afectar la apariencia general. Las corbatas más delgadas pueden verse más modernas, mientras que las más anchas son clásicas.\\n\\n5. **Tamaño**: Asegúrate de que la corbata se ajuste a tu altura y complexión. También considera la longitud para que llegue a la altura adecuada del cinturón.\\n\\nSi necesitas recomendaciones de lugares para comprar o estilos específicos, ¡dímelo!'}, {'role': 'user', 'content': 'Quiero una corbata roja'}]\n",
-      "El historial es:\n",
-      "[{'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero comprar una corbata'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Claro! Aquí tienes algunos consejos para elegir una corbata:\\n\\n1. **Ocasión**: Considera para qué evento necesitas la corbata. Las corbatas para ocasiones formales pueden ser más elegantes, mientras que las informales pueden ser más divertidas.\\n\\n2. **Color**: Piensa en los colores de la ropa que ya tienes. Las corbatas en colores sólidos son versátiles, pero también puedes optar por patrones como rayas, lunares o cuadros.\\n\\n3. **Material**: Las corbatas pueden estar hechas de seda, poliéster, lana, entre otros. La seda es una opción elegante para eventos formales.\\n\\n4. **Ancho**: El ancho de la corbata puede afectar la apariencia general. Las corbatas más delgadas pueden verse más modernas, mientras que las más anchas son clásicas.\\n\\n5. **Tamaño**: Asegúrate de que la corbata se ajuste a tu altura y complexión. También considera la longitud para que llegue a la altura adecuada del cinturón.\\n\\nSi necesitas recomendaciones de lugares para comprar o estilos específicos, ¡dímelo!'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero una corbata roja'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Perfecto! Una corbata roja es una elección audaz y elegante. Aquí tienes algunas opciones y consejos para encontrarla:\\n\\n1. **Estilo**: Decide si prefieres una corbata roja sólida o con un patrón (rayas, lunares, estampados, etc.). Las corbatas rojas sólidas son muy versátiles y pueden combinarse con muchas camisas.\\n\\n2. **Material**: Las corbatas de seda son muy populares para eventos formales y lucen muy bien. Si buscas algo más casual, también hay opciones de poliéster o algodón.\\n\\n3. **Tienda física o en línea**: Puedes encontrar corbatas rojas en tiendas de moda, tiendas de trajes o grandes almacenes. Si prefieres comprar en línea, plataformas como Amazon, eBay y tiendas especializadas en moda también tienen buena selección.\\n\\n4. **Marcas**: Algunas marcas reconocidas que ofrecen corbatas de calidad incluyen Hugo Boss, Tommy Hilfiger, Zara, y Seidensticker, entre otras.\\n\\n5. **Cuidado**: Asegúrate de revisar las instrucciones de cuidado para mantener la corbata en buen estado.\\n\\nSi necesitas ayuda para encontrar sitios específicos o tiendas en tu área, no dudes en preguntar. ¡Buena suerte con tu compra!'}]\n",
-      "Y los mensajes son:\n",
-      "[{'role': 'system', 'content': 'Eres un assistente muy útil'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Hola'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Hola! ¿Cómo puedo ayudarte hoy?'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero comprar una corbata'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Claro! Aquí tienes algunos consejos para elegir una corbata:\\n\\n1. **Ocasión**: Considera para qué evento necesitas la corbata. Las corbatas para ocasiones formales pueden ser más elegantes, mientras que las informales pueden ser más divertidas.\\n\\n2. **Color**: Piensa en los colores de la ropa que ya tienes. Las corbatas en colores sólidos son versátiles, pero también puedes optar por patrones como rayas, lunares o cuadros.\\n\\n3. **Material**: Las corbatas pueden estar hechas de seda, poliéster, lana, entre otros. La seda es una opción elegante para eventos formales.\\n\\n4. **Ancho**: El ancho de la corbata puede afectar la apariencia general. Las corbatas más delgadas pueden verse más modernas, mientras que las más anchas son clásicas.\\n\\n5. **Tamaño**: Asegúrate de que la corbata se ajuste a tu altura y complexión. También considera la longitud para que llegue a la altura adecuada del cinturón.\\n\\nSi necesitas recomendaciones de lugares para comprar o estilos específicos, ¡dímelo!'}, {'role': 'user', 'metadata': {'title': None}, 'content': 'Quiero una corbata roja'}, {'role': 'assistant', 'metadata': {'title': None}, 'content': '¡Perfecto! Una corbata roja es una elección audaz y elegante. Aquí tienes algunas opciones y consejos para encontrarla:\\n\\n1. **Estilo**: Decide si prefieres una corbata roja sólida o con un patrón (rayas, lunares, estampados, etc.). Las corbatas rojas sólidas son muy versátiles y pueden combinarse con muchas camisas.\\n\\n2. **Material**: Las corbatas de seda son muy populares para eventos formales y lucen muy bien. Si buscas algo más casual, también hay opciones de poliéster o algodón.\\n\\n3. **Tienda física o en línea**: Puedes encontrar corbatas rojas en tiendas de moda, tiendas de trajes o grandes almacenes. Si prefieres comprar en línea, plataformas como Amazon, eBay y tiendas especializadas en moda también tienen buena selección.\\n\\n4. **Marcas**: Algunas marcas reconocidas que ofrecen corbatas de calidad incluyen Hugo Boss, Tommy Hilfiger, Zara, y Seidensticker, entre otras.\\n\\n5. **Cuidado**: Asegúrate de revisar las instrucciones de cuidado para mantener la corbata en buen estado.\\n\\nSi necesitas ayuda para encontrar sitios específicos o tiendas en tu área, no dudes en preguntar. ¡Buena suerte con tu compra!'}, {'role': 'user', 'content': '¿Cuanto suele costar?'}]\n"
-     ]
     }
    ],
    "source": [
@@ -217,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1f91b414-8bab-472d-b9c9-3fa51259bdfe",
    "metadata": {},
    "outputs": [],
@@ -232,13 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4e5be3ec-c26c-42bc-ac16-c39d369883f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    print(\"Total Msgs : \" + str(len(messages)))\n",
+    "    print(len(messages))\n",
     "\n",
     "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
     "\n",
@@ -250,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "413e9e4e-7836-43ac-a0c3-e1ab5ed6b136",
    "metadata": {},
    "outputs": [
@@ -258,15 +228,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7872\n",
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* Running on public URL: https://1fc097d30dc668485f.gradio.live\n",
       "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7872/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://1fc097d30dc668485f.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -279,18 +250,18 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(share=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "d75f0ffa-55c8-4152-b451-945021676837",
    "metadata": {},
    "outputs": [],
@@ -301,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "c602a8dd-2df7-4eb7-b539-4e01865a6351",
    "metadata": {},
    "outputs": [
@@ -309,15 +280,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7873\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7863\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7873/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7863/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -330,7 +300,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "0a987a66-1061-46d6-a83a-a30859dc88bf",
    "metadata": {},
    "outputs": [],
@@ -365,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "20570de2-eaad-42cc-a92c-c779d71b48b6",
    "metadata": {},
    "outputs": [
@@ -373,15 +343,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7874\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7874/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -394,7 +363,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
