--- a/week2/day4.ipynb
+++ b/week2/day4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
    "metadata": {},
    "outputs": [
@@ -77,15 +77,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7875\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7867\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7875/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -98,7 +97,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,24 +131,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "0696acb1-0b05-4dc2-80d5-771be04f1fb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vamos a hacer una función útil\n",
     "\n",
-    "ticket_prices = {\"londres\": \"799€\", \"parís\": \"899€\", \"tokyo\": \"1400€\", \"berlín\": \"499€\"}\n",
+    "ticket_prices = {\"londres\": \"799€\", \"parís\": \"899€\", \"tokyo\": \"1400€\", \"berlín\": \"499€\", \"medellín\": \"700€\"}\n",
+    "ticket_times = {\"londres\": \"07:00\", \"parís\": \"11:00\", \"tokyo\": \"22:00\", \"berlín\": \"14:55\"}\n",
     "\n",
     "def get_ticket_price(destination_city):\n",
     "    print(f\"Se solicitó la herramienta get_ticket_price para {destination_city}\")\n",
     "    city = destination_city.lower()\n",
-    "    return ticket_prices.get(city, \"Unknown\")"
+    "    price = ticket_prices.get(city, \"Unknown\")\n",
+    "    print(f\"Se solicitó la herramienta get_ticket_price para {city} precio: {price}\")\n",
+    "    return price\n",
+    "\n",
+    "def get_ticket_time(destination_city):\n",
+    "    print(f\"Se solicitó la herramienta get_ticket_times para {destination_city}\")\n",
+    "    city = destination_city.lower()\n",
+    "    return ticket_times.get(city, \"Unknown\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "80ca4e09-6287-4d3f-997d-fa6afbcf6c85",
    "metadata": {},
    "outputs": [
@@ -157,27 +164,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se solicitó la herramienta get_ticket_price para Berlin\n"
+      "Se solicitó la herramienta get_ticket_price para Berlin\n",
+      "Se solicitó la herramienta get_ticket_price para berlin precio: Unknown\n",
+      "Se solicitó la herramienta get_ticket_times para parís\n",
+      "Se solicitó la herramienta get_ticket_times para Medellín\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'499€'"
+       "'Unknown'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_ticket_price(\"Berlin\")"
+    "get_ticket_price(\"Berlin\")\n",
+    "get_ticket_time(\"parís\")\n",
+    "get_ticket_time(\"Medellín\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "4afceded-7178-4c05-8fa6-9f2085e6a344",
    "metadata": {},
    "outputs": [],
@@ -187,6 +199,22 @@
     "price_function = {\n",
     "    \"name\": \"get_ticket_price\",\n",
     "    \"description\": \"Obtén el precio de un billete de ida y vuelta a la ciudad de destino. Llámalo siempre que necesites saber el precio del billete, por ejemplo, cuando un cliente pregunte '¿Cuánto cuesta un billete a esta ciudad?'\",\n",
+    "    \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "            \"destination_city\": {\n",
+    "                \"type\": \"string\",\n",
+    "                \"description\": \"La ciudad a la que se viaja\",\n",
+    "            },\n",
+    "        },\n",
+    "        \"required\": [\"destination_city\"],\n",
+    "        \"additionalProperties\": False\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "time_function = {\n",
+    "    \"name\": \"get_ticket_time\",\n",
+    "    \"description\": \"Obtén la hora de salida de un vuelo para una ciudad en especifico. Llámalo siempre que necesites saber el horario de salida, por ejemplo, cuando un cliente pregunte '¿a que horas sale el vuelo x, o A que hora sale el vuelo'\",\n",
     "    \"parameters\": {\n",
     "        \"type\": \"object\",\n",
     "        \"properties\": {\n",
@@ -203,14 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "bdca8679-935f-4e7f-97e6-e71a4d4f228c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Y esto está incluido en una lista de herramientas:\n",
     "\n",
-    "tools = [{\"type\": \"function\", \"function\": price_function}]"
+    "tools = [{\"type\": \"function\", \"function\": price_function},\n",
+    "        {\"type\": \"function\", \"function\": time_function}]"
    ]
   },
   {
@@ -229,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "ce9b0744-9c78-408d-b9df-9f6fd9ed78cf",
    "metadata": {},
    "outputs": [],
@@ -240,9 +269,9 @@
     "\n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
     "        message = response.choices[0].message\n",
-    "        response, city = handle_tool_call(message)\n",
+    "        tool_responses = handle_tool_call(message)\n",
     "        messages.append(message)\n",
-    "        messages.append(response)\n",
+    "        messages.extend(tool_responses)  # añadir todos\n",
     "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
     "    \n",
     "    return response.choices[0].message.content"
@@ -250,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "b0992986-ea09-4912-a076-8e5603ee631f",
    "metadata": {},
    "outputs": [],
@@ -258,21 +287,33 @@
     "#Tenemos que escribir esa función handle_tool_call:\n",
     "\n",
     "def handle_tool_call(message):\n",
-    "    tool_call = message.tool_calls[0]\n",
-    "    arguments = json.loads(tool_call.function.arguments)\n",
-    "    city = arguments.get('destination_city')\n",
-    "    price = get_ticket_price(city)\n",
-    "    response = {\n",
-    "        \"role\": \"tool\",\n",
-    "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
-    "        \"tool_call_id\": message.tool_calls[0].id\n",
-    "    }\n",
-    "    return response, city"
+    "    responses = []\n",
+    "    for tool_call in message.tool_calls:\n",
+    "        arguments = json.loads(tool_call.function.arguments)\n",
+    "        city = arguments.get(\"destination_city\")\n",
+    "\n",
+    "        if tool_call.function.name == \"get_ticket_price\":\n",
+    "            result = get_ticket_price(city)\n",
+    "            responses.append({\n",
+    "                \"role\": \"tool\",\n",
+    "                \"content\": json.dumps({\"destination_city\": city, \"price\": result}),\n",
+    "                \"tool_call_id\": tool_call.id\n",
+    "            })\n",
+    "\n",
+    "        elif tool_call.function.name == \"get_ticket_time\":\n",
+    "            result = get_ticket_time(city)\n",
+    "            responses.append({\n",
+    "                \"role\": \"tool\",\n",
+    "                \"content\": json.dumps({\"destination_city\": city, \"time\": result}),\n",
+    "                \"tool_call_id\": tool_call.id\n",
+    "            })\n",
+    "\n",
+    "    return responses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "id": "f4be8a71-b19e-4c2f-80df-f59ff2661f14",
    "metadata": {},
    "outputs": [
@@ -280,15 +321,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7877\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
+      "* Running on local URL:  http://127.0.0.1:7872\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7877/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7872/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -301,7 +341,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -309,7 +349,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se solicitó la herramienta get_ticket_price para Londres\n"
+      "Se solicitó la herramienta get_ticket_price para Medellín\n",
+      "Se solicitó la herramienta get_ticket_price para medellín precio: 700€\n",
+      "Se solicitó la herramienta get_ticket_price para Medellín\n",
+      "Se solicitó la herramienta get_ticket_price para medellín precio: 700€\n",
+      "Se solicitó la herramienta get_ticket_times para Medellín\n"
      ]
     }
    ],
@@ -321,6 +365,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11c9da69-d0cf-4cf2-a49e-e5669deec47b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4cf884-6cae-4ab2-954a-7b8a9ced0a49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -342,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
